--- a/assets/scss/pages/_other.scss
+++ b/assets/scss/pages/_other.scss
@@ -180,5 +180,49 @@
 				}
 			}
 		}
+
+		.partner {
+			padding: 0 20px;
+			box-sizing: border-box;
+			margin: 90px auto;
+			width: 100%;
+			max-width: 1140px;
+
+			&.with__image {
+				.inner {
+					@include flex;
+
+					figure {
+						max-width: 200px;
+					}
+
+					.content {
+						padding: 0 0 20px;
+						margin-left: 60px; 
+						box-sizing: border-box;
+						width: calc(100% - 360px);
+
+						p {
+							font: 100 19px $fontFamily;
+							text-align: justify;
+							line-height: 1.5;
+
+							&:not(:first-child) {
+								margin-top: 20px;
+							}
+
+							strong {
+								font-weight: 500;
+								font-size: 30px;
+							}
+
+							small {
+								display: block;
+							}
+						}
+					}
+				}
+			}
+		}
 	}
 }
