--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -379,6 +379,10 @@ main:before {
   height: 1px;
 }
 
+section[data-sv] {
+  visibility: hidden;
+}
+
 .fade-in {
   animation: opacityIn 2s forwards;
 }
@@ -1048,6 +1052,164 @@ footer .inner .copyright .inner small {
   font-size: 30px;
 }
 .other .inner .partner.with__image .inner .content p small {
+  display: block;
+}
+.other .inner .staff {
+  padding: 0 20px;
+  box-sizing: border-box;
+  margin: 90px auto;
+  width: 100%;
+  max-width: 1140px;
+}
+.other .inner .staff.with__image .inner {
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: space-between;
+  align-items: flex-start;
+  flex-direction: column;
+}
+.other .inner .staff.with__image .inner figure {
+  max-width: 100%;
+}
+.other .inner .staff.with__image .inner .title {
+  padding: 20px 0 20px;
+  box-sizing: border-box;
+  width: 100%;
+}
+.other .inner .staff.with__image .inner .title h2 {
+  font: 500 30px "Roboto", sans-serif;
+}
+
+.education .inner .kv .kv__container {
+  position: relative;
+  width: 100%;
+  height: 400px;
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: center;
+  align-items: center;
+  background: #003456;
+}
+.education .inner .kv .kv__container h1 {
+  position: relative;
+  z-index: 4;
+  text-align: center;
+  font: 500 35px "Roboto", sans-serif;
+  color: #fff;
+  text-shadow: 2px 2px #000;
+}
+.education .inner .kv .kv__container .image {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  left: 0;
+  right: 0;
+  width: 100%;
+  height: 400px;
+  background-size: cover !important;
+  background-position: center 37% !important;
+  background-repeat: no-repeat !important;
+}
+.education .inner .sub-learn {
+  padding: 0 20px;
+  box-sizing: border-box;
+  margin: 90px auto;
+  width: 100%;
+  max-width: 1140px;
+}
+.education .inner .sub-learn .inner .content .button__selector {
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: space-between;
+  align-items: flex-start;
+  flex-flow: nowrap;
+}
+.education .inner .sub-learn .inner .content .button__selector button {
+  position: relative;
+  width: calc(100% / 2 - 2px);
+  -webkit-appearance: none;
+          appearance: none;
+  border: 0;
+  outline: 0;
+  background: lightgray;
+  height: 200px;
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: center;
+  align-items: center;
+  transition: 0.3s ease all;
+  background-size: cover;
+  background-position: center;
+  overflow: hidden;
+}
+.education .inner .sub-learn .inner .content .button__selector button:hover:after {
+  opacity: 0;
+}
+.education .inner .sub-learn .inner .content .button__selector button.is__active:after {
+  opacity: 1;
+  background: rgba(2, 88, 145, 0.7);
+}
+.education .inner .sub-learn .inner .content .button__selector button:after {
+  background: rgba(255, 255, 255, 0.6);
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  content: "";
+  transition: 1s ease;
+}
+.education .inner .sub-learn .inner .content .button__selector button span {
+  position: relative;
+  z-index: 2;
+  font: 500 30px "Roboto", sans-serif;
+  color: #fff;
+  transition: 1s ease;
+  text-shadow: 2px 2px #000;
+}
+.education .inner .sub-learn .inner .content .content__holder {
+  pointer-events: none;
+  visibility: hidden;
+  opacity: 0;
+  display: none;
+  transition: opacity 2s;
+}
+.education .inner .sub-learn .inner .content .content__holder.is__active {
+  margin-top: 20px;
+  pointer-events: all;
+  opacity: 1;
+  display: block;
+  visibility: visible;
+  animation: fadeIn 1s forwards;
+}
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+.education .inner .sub-learn .inner .content .content__holder .slider {
+  overflow: hidden;
+}
+.education .inner .sub-learn .inner .content .content__holder .slider .swiper-wrapper .swiper-slide h3 {
+  font: 500 30px "Roboto", sans-serif;
+  padding-bottom: 20px;
+}
+.education .inner .sub-learn .inner .content .content__holder .slider .swiper-wrapper .swiper-slide p {
+  font: 100 19px "Roboto", sans-serif;
+  text-align: justify;
+  line-height: 1.5;
+}
+.education .inner .sub-learn .inner .content .content__holder .slider .swiper-wrapper .swiper-slide p:not(:first-child) {
+  margin-top: 20px;
+}
+.education .inner .sub-learn .inner .content .content__holder .slider .swiper-wrapper .swiper-slide p strong {
+  font-weight: 500;
+  font-size: 30px;
+}
+.education .inner .sub-learn .inner .content .content__holder .slider .swiper-wrapper .swiper-slide p small {
   display: block;
 }
 
